# R-SODIUM-Ultra-Enclosure-2.0-Firmware

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  TMP117_test.c.bak  WS2812_test.c.bak  fan_pwm.c.bak  idf_component.yml  lvgl_demo_ui.c  lvgl_test.c.bak  main.c
main/fan_ctl/: pwm_ctl.c  pwm_temp_ctl.c.bak
main/i2c_0/INA234/: INA234_BUS.c  INA234_BUS.h
main/i2c_0/MP4245/: MP4245.c.bak
main/i2c_0/TMP117/: TMP117.c  TMP117.h  TMP117_test.c.bak
main/i2c_1/lvgl_ui/: display.c  lvgl_init.c  lvgl_init.h  lvgl_show.c
main/init_func/: init_func.c  init_func.h
main/res/: pixelmplus.c
main/ws2812/: ws2812.c
